--- a/examples/shapes/config/config.plugins.yml
+++ b/examples/shapes/config/config.plugins.yml
@@ -1,3 +1,7 @@
 CirclePlugin:
   count: 12345
   digits: [1, 2, 3, 4, 5, 6, 7, 8, 9, 0]
+ShapesPlugin:
+  answer: 42
+  bot_uprising: {casualties: 4523857, happening: true}
+  fruit: [apple, pear, orange]
